# aas-edge-client

./: .gitignore  LICENCE.md  README.md  docker-compose.yaml
.github/workflows/: docker-build-push.yml
backend/: Cargo.toml  Dockerfile  README.md  aas_client.env
backend/src/: error.rs  main.rs  routes.rs
backend/src/functions/: aas_interfaces.rs  bash_command.rs  mod.rs  onboarding.rs  scheduler_task.rs  transform_value_submodel.rs
backend/src/handlers/: home.rs  mod.rs  openapi.rs  picture.rs  submodels.rs
backend/src/state/: mod.rs
backend/static/: asset_info.json
dist-docker-compose/: aas_client.env  docker-compose.yaml
dist-docker-compose/mount_volumes/backend/static/: asset_info.json  openapi.yaml
dist-docker-compose/mount_volumes/frontend/: company-link.json  theme.json
dist-docker-compose/nginx/: nginx.conf
docs/: Backend.md  Deployment-docker.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/mount_volume/: company-link.json  theme.json
frontend/src/: App.jsx  index.js  reportWebVitals.js  theme.jsx  utils.js
frontend/src/components/charts/: PieChart.jsx  TimeSeriesChart.jsx
frontend/src/components/common/: ImageFromBackend.jsx
frontend/src/components/navbar/: Navbar.jsx  Searchbar.jsx  UserProfileMenu.jsx  (+1 more)
frontend/src/hooks/: useCustomTheme.jsx
frontend/src/pages/: HomePage.jsx  NetworkConfigurationPage.jsx  PageContainer.jsx  SystemInformationPage.jsx
frontend/src/redux/: store.js
frontend/src/services/: apiService.js  pictureService.js  submodelsService.js
nginx/: nginx.conf
(+11 files in other folders)
