[package]
name = "rust_web_mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
mongodb = { version = "2.8.1", default-features = false, features = ["async-std-runtime"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
env_logger = "0.11"
log = "^0.4"
dotenv = "0.15.0" # to load env var
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.13"
anyhow = "1.0"
futures = "0.3"
chrono = "0.4.37"
clokwerk = "0.4.0"
actix-cors = "0.7.0"
actix-files = "0.6.5"
serde_yaml = "0.9.34"
